<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1A1A1A"
    android:orientation="vertical"
    android:paddingHorizontal="50dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/krona_one"
            android:text="@string/cadastrar_titulo"
            android:textAllCaps="true"
            android:textColor="@color/seed"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@drawable/union" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona_one"
            android:text="@string/usuario"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:fontFamily="@font/krona_one"
            android:hint="@string/nome_do_usuario"
            android:textColor="@color/design_default_color_on_primary"
            android:textColorHint="@color/md_theme_light_outline"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona_one"
            android:text="Email"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_on_primary"
            android:fontFamily="@font/krona_one"
            android:hint="@string/email_gmail_com"
            android:textColor="@color/design_default_color_on_primary"
            android:textColorHint="@color/md_theme_light_outline"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textInputSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona_one"
            android:text="@string/senha_label"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_on_primary"
                android:fontFamily="@font/krona_one"
                android:hint="@string/senha"

                android:inputType="textPassword"
                android:textColor="@color/design_default_color_on_primary"
                android:textColorHint="@color/md_theme_light_outline"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/imageMostraSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"

                android:src="@drawable/baseline_remove_red_eye_24"
                android:layout_alignRight="@id/editTextSenha"
                android:layout_alignTop="@id/editTextSenha"
                />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textInputConfirmarSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/krona_one"
            android:text="Confirmar senha"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextConfirmarSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/design_default_color_on_primary"
                android:fontFamily="@font/krona_one"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:textColor="@color/design_default_color_on_primary"
                android:textColorHint="@color/md_theme_light_outline"
                android:textSize="12sp" />

            <ImageButton
                android:id="@+id/imageMostrarConfirmarSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"

                android:src="@drawable/baseline_remove_red_eye_24"
                android:layout_alignRight="@id/editTextConfirmarSenha"
                android:layout_alignTop="@id/editTextConfirmarSenha"
                />
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_possui_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/krona_one"
        android:text="Possui conta? Faça login agora!"
        android:textColor="@color/cardview_light_background"
        android:textSize="10sp"
        tools:ignore="SmallSp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_login"
        android:backgroundTint="@color/white"
        android:padding="12dp"
        app:rippleColor="#FFFFFF">


        <TextView
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/krona_one"
            android:gravity="center"
            android:text="Cadastrar"
            android:textColor="@color/cardview_light_background" />



    </RelativeLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/krona_one"
        android:text="@string/ou_faca_login_atraves_das_seguintes_plataformas"
        android:textColor="@color/cardview_light_background"
        android:textSize="8sp"
        tools:ignore="SmallSp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_login"
        android:backgroundTint="@color/white"
        android:padding="7dp"
        android:text="Cadastrar via Google"
        app:rippleColor="#FFFFFF">

        <ImageView
            android:id="@+id/image_google"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_google"
            android:fontFamily="@font/krona_one"
            android:text="Cadastrar via Google"
            android:textColor="@color/cardview_light_background"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_btn_login"
        android:backgroundTint="@color/white"
        android:padding="10.5dp"
        android:text="Cadastrar via Google"
        app:rippleColor="#FFFFFF">

        <ImageView
            android:id="@+id/image_discord"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"

            android:src="@drawable/vector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_discord_singup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_discord_singup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image_discord"
            android:fontFamily="@font/krona_one"
            android:text="Cadastrar via Discord"
            android:textColor="@color/cardview_light_background"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>